# festivalapp

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/festivalapp/: __init__.py  cli.py  models.py  report.py
src/festivalapp/festivals/: __init__.py  calendar.py  details.py  regional.py
src/festivalapp/planner/: __init__.py  preparation.py  recipes.py
tests/: test_benchmark.py  test_core.py  test_festivalapp.py  test_integration.py
